--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -13,40 +13,40 @@ The system interfaces with other firms (e.g. transportation companies, territory
 \subsubsection{Goals}
 The system should:
 	\begin{enumerate}[label={[G\arabic*]}]
-		\item \label{G_dev_language} allow a Person to use the app in his/her device language, if the language is one of the \defined{supported languages}, English otherwise
-		\item \label{G_become_registered} allow a Person to become a registered User after providing credentials
-		\item \label{G_log_in} allow a Person to log in
-		\item \label{G_welcome_page} allow a new User to access the welcome page
-		\item \label{G_add_credit_card} allow User to add credit card data
-		\item \label{G_add_licence} allow User to add driving license
-		\item \label{G_pers_preferences} allow a User to set personal preferences:
+		\item \mylabel{G-dev-language}{allow a Person to use the app in his/her device language, if the language is one of the \defined{supported languages}, English otherwise}
+		\item \mylabel{G-become-registered}{allow every Person to have his/her own account, after providing credentials}
+		\item \mylabel{G-log-in}{allow a Person to log in}
+		\item \mylabel{G-welcome-page}{allow a new User to access the welcome page}
+		\item \mylabel{G-add-credit-card}{allow User to add credit card data}
+		\item \mylabel{G-add-licence}{allow User to add driving license}
+		\item \mylabel{G-pers-preferences}{allow a User to set personal preferences:}
 		\begin{enumerate}[label=\theenumi\#{\arabic*}]
-			\item \label{G_eco_friendly} specify his/her preference for eco-friendly solution
-			\item \label{G_break_windows} set break time windows, either flexible or fixed
-			\item \label{G_time_slot} set time slot in which the use of specific transportation means should be avoided
-			\item \label{G_min_distance} set a minimum distance below which a specific transportation mean should be avoided
-			\item \label{G_max_distance} set a maximum distance beyond which a specific transportation mean should be avoided
-			\item \label{G_transp_disabled} set a specific transportation mean as permanently disabled
+			\item \mylabel{G-eco-friendly}{specify his/her preference for eco-friendly solution}
+			\item \mylabel{G-break-windows}{set break time windows, either flexible or fixed}
+			\item \mylabel{G-time-slot}{set time slot in which the use of specific transportation means should be avoided}
+			\item \mylabel{G-min-distance}{set a minimum distance below which a specific transportation mean should be avoided}
+			\item \mylabel{G-max-distance}{set a maximum distance beyond which a specific transportation mean should be avoided}
+			\item \mylabel{G-transp-disabled}{set a specific transportation mean as permanently disabled}
 		\end{enumerate}
-		\item \label{G_new_appointment} allow User to create a new appointment, specifying its details
-		\item \label{G_visualize&update} allow User to visualize his/her appointments, eventually updating its details
-		\item \label{G_choose_sug} during the specification of details of an appointment, allow User to visualize suggested travel solutions and to choose one of them
-		\item \label{G_change_preferred_transp} during the specification of details of an appointment, before the choice, allow User to set a preferred transportation mean
-		\item \label{G_invite} during the specification of details of an appointment, allow User to invite other persons to the appointment
-		\item \label{G_owns_ticket} during the specification of details of an appointment, if for the selected travel solution a ticket is expected, allow User to specify if he/she owns a ticket, either ordinary or a pass (eventually specifying the deadline)
+		\item \mylabel{G-new-appointment}{allow User to create a new appointment, specifying its details}
+		\item \mylabel{G-visualize-update}{allow User to visualize his/her appointments, eventually updating its details}
+		\item \mylabel{G-choose-sug}{during the specification of details of an appointment, allow User to visualize suggested travel solutions and to choose one of them}
+		\item \mylabel{G-change-preferred-transp}{during the specification of details of an appointment, before the choice, allow User to set a preferred transportation mean}
+		\item \mylabel{G-invite}{during the specification of details of an appointment, allow User to invite other persons to the appointment}
+		\item \mylabel{G-owns-ticket}{during the specification of details of an appointment, if for the selected travel solution a ticket is expected, allow User to specify if he/she owns a ticket, either ordinary or a pass (eventually specifying the deadline)}
 		\begin{enumerate}[label=\theenumi\#{\arabic*}]
-			\item \label{G_buy_ticket} if the user does not own a ticket and the transportation company is \defined{affiliated} with Travlendar+, he/she can buy it
+			\item \mylabel{G-buy-ticket}{if the user does not own a ticket and the transportation company is \defined{affiliated} with Travlendar+, he/she can buy it}
 		\end{enumerate}
-		\item \label{G_visualize_schedule} allow User to visualize daily/weekly schedule
-		\item \label{G_delete} allow User to delete an existing appointment
-		\item \label{G_locate} allow User to locate nearest vehicle of a vehicle sharing system, if that is the transportation mean of choice of an incoming appointment
-		\item \label{G_redirection} allow User to being redirected to the company's app to proceed with the renting of the selected shared vehicle
-		\item \label{G_show_suggestions} show suggestions based on: traffic, weather conditions/forecast, strikes, type of appointment, baggage, passengers
-		\item \label{G_notify} notify the User about incoming appointments
+		\item \mylabel{G-visualize-schedule}{allow User to visualize daily/weekly schedule}
+		\item \mylabel{G-delete}{allow User to delete an existing appointment}
+		\item \mylabel{G-locate}{allow User to locate nearest vehicle of a vehicle sharing system, if that is the transportation mean of choice of an incoming appointment}
+		\item \mylabel{G-redirection}{allow User to being redirected to the company's app to proceed with the renting of the selected shared vehicle}
+		\item \mylabel{G-show-suggestions}{show suggestions based on: traffic, weather conditions/forecast, strikes, type of appointment, baggage, passengers}
+		\item \mylabel{G-notify}{notify the User about incoming appointments}
 		\begin{enumerate}[label=\theenumi\#{\arabic*}]
-			\item \label{G_confirmation} asking for confirmation on the transportation means previously planned
-			\item \label{G_notify_suggestions} in case no transportation mean was selected, suggesting one
-%			\item \label{G_complications} communicating eventually complications (bad weather, traffic) and suggesting more feasible solutions
+			\item \mylabel{G-confirmation}{asking for confirmation on the transportation means previously planned}
+			\item \mylabel{G-notify-suggestions}{in case no transportation mean was selected, suggesting one}
+			\item \mylabel{G-complications}{communicating eventually complications (bad weather, traffic) and suggesting more feasible solutions}
 		\end{enumerate}
 	\end{enumerate}
 
