--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -53,9 +53,10 @@ Here we provide several scenarios to better delineate the purposes for which the
 		\end{itemize}
 \subsection{Assumptions, dependencies and constraints}
 	\begin{enumerate}[label={[D\arabic*]}]
-		\item \label{D_retrieve_language} the user's device should allow the app to retrieve the language settings
-		\item \label{D_email_always_received} when the S2B sends an email, it is always received by the receiver
-		\item \label{D_working_gps} the User's device has a working GPS installed, to which the app has access
-		\item \label{D_provide_loc_API} the affiliated companies provide a localization service APIs
-		\item \label{D_traffic} Google Maps services take traffic into consideration
+		\item \mylabel{D-retrieve-language}{the user's device should allow the app to retrieve the language settings}
+		\item \mylabel{D-email-always-received}{when the S2B sends an email, it is always received by the receiver}
+		\item \mylabel{D-everyone-email}{every Person has an email address}
+		\item \mylabel{D-working-gps}{the User's device has a working GPS installed, to which the app has access}
+		\item \mylabel{D-provide-loc-API}{the affiliated companies provide a localization service APIs}
+		\item \mylabel{D-traffic}{Google Maps services take traffic into consideration}
 	\end{enumerate}
