complete requirements of defined goals

--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -15,11 +15,9 @@ The system should:
 	\begin{enumerate}[label={[G\arabic*]}]
 		\item \mylabel{G-dev-language}{allow a Person to use the app in his/her device language, if the language is one of the \defined{supported languages}, English otherwise}
 		\item \mylabel{G-become-registered}{allow every Person to have his/her own account, after providing credentials}
-		\item \mylabel{G-log-in}{allow a Person to log in}
-		\item \mylabel{G-welcome-page}{allow a new User to access the welcome page}
-		\item \mylabel{G-add-credit-card}{allow User to add credit card data}
-		\item \mylabel{G-add-licence}{allow User to add driving license}
-		\item \mylabel{G-pers-preferences}{allow a User to set personal preferences:}
+		\item \mylabel{G-log-in}{allow a Person to log in to his/her own account, and only in that}
+		\item \mylabel{G-use-credit-card}{allow User to use his/her own credit card}
+		\item \mylabel{G-pers-preferences}{allow a User to set personal preferences}
 		\begin{enumerate}[label=\theenumi\#{\arabic*}]
 			\item \mylabel{G-eco-friendly}{specify his/her preference for eco-friendly solution}
 			\item \mylabel{G-break-windows}{set break time windows, either flexible or fixed}
