--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -52,11 +52,19 @@ Here we provide several scenarios to better delineate the purposes for which the
 			\item Manager: the person able to manage the system. His activities consists in adding or deleting affiliated companies (both  transport companies or shared vehicle companies) and adding new type of tickets according to the services provided by affiliated transport companies.
 		\end{itemize}
 \subsection{Assumptions, dependencies and constraints}
-	\begin{enumerate}[label={[D\arabic*]}]
-		\item \mylabel{D-retrieve-language}{the user's device should allow the app to retrieve the language settings}
-		\item \mylabel{D-email-always-received}{when the S2B sends an email, it is always received by the receiver}
-		\item \mylabel{D-everyone-email}{every Person has an email address}
-		\item \mylabel{D-working-gps}{the User's device has a working GPS installed, to which the app has access}
-		\item \mylabel{D-provide-loc-API}{the affiliated companies provide a localization service APIs}
-		\item \mylabel{D-traffic}{Google Maps services take traffic into consideration}
-	\end{enumerate}
+	\subsubsection{Text Assumptions}
+		\begin{itemize}
+			\item credit cards do not have an expiration date
+		\end{itemize}
+
+	\subsubsection{Domain Assumptions}
+		\begin{enumerate}[label={[D\arabic*]}]
+			\item \mylabel{D-retrieve-language}{the user's device should allow the app to retrieve the language settings}
+			\item \mylabel{D-registration-proceed}{when the registration process begin, the User always inserts his/her credentials}
+			\item \mylabel{D-email-always-received}{when the S2B sends an email, it is always received by the receiver}
+			\item \mylabel{D-everyone-email}{every Person has an email address}
+			\item \mylabel{D-user-remember}{the User shall remember his password}
+			\item \mylabel{D-working-gps}{the User's device has a working GPS installed, to which the app has access}
+			\item \mylabel{D-provide-loc-API}{the affiliated companies provide a localization service APIs}
+			\item \mylabel{D-traffic}{Google Maps services take traffic into consideration}
+		\end{enumerate}
