update registration activity diagram

--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -220,7 +220,7 @@
 		\end{figure}
 	\subsubsection{Activity diagrams}
 		\begin{figure}[H]
-			\centerline{\includegraphics[height=0.75\paperheight]{Images/RegistrationDiagramAD}}
+			\centerline{\includegraphics[width=\paperwidth-1]{Images/RegistrationDiagramAD}}
 			\caption{Registration activity diagram}
 		\end{figure}
 		\begin{figure}[H]
