--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -29,7 +29,9 @@ The system should:
 		\item \mylabel{G-new-appointment}{allow User to create a new appointment, specifying its details}
 		\item \mylabel{G-visualize-update}{allow User to visualize his/her appointments, eventually updating its details}
 		\item \mylabel{G-choose-sug}{during the specification of details of an appointment, allow User to visualize suggested travel solutions and to choose one of them}
-		\item \mylabel{G-change-preferred-transp}{during the specification of details of an appointment, before the choice, allow User to set a preferred transportation mean}
+		\begin{enumerate}[label=\theenumi\#{\arabic*}]
+			\item \mylabel{G-change-preferred-transp}{during the specification of details of an appointment, before the choice, allow User to set a preferred transportation mean}
+		\end{enumerate}
 		\item \mylabel{G-invite}{during the specification of details of an appointment, allow User to invite other persons to the appointment}
 		\item \mylabel{G-owns-ticket}{during the specification of details of an appointment, if for the selected travel solution a ticket is expected, allow User to specify if he/she owns a ticket, either ordinary or a pass (eventually specifying the deadline)}
 		\begin{enumerate}[label=\theenumi\#{\arabic*}]
