--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -246,7 +246,7 @@
 \subsubsection{Sequence Diagram}
 We chose to omit the Sequence Diagram considering that the Activity diagram in this phase will fit better.
 \subsection{Functional Requirements}
-	\myref{G-dev-language}
+	\goal{G-dev-language}
 	\begin{enumerate}[label={[R\arabic*]}]
 		\item \mylabel{R-retrieve-language}{the app must retrieve the language settings from the device}
 		\item \mylabel{R-display}{the app should be able to display its content in all the \defined{supported languages}}
@@ -255,8 +255,7 @@ We chose to omit the Sequence Diagram considering that the Activity diagram in t
 		\item[] \myref{D-retrieve-language}
 	\end{itemize}
 
-	\bigskip
-	\noindent\myref{G-become-registered}
+	\goal{G-become-registered}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-begin-registration}{the S2B must provide a way to begin the registration process}
 		\item \mylabel{R-send-email}{after the insertion of the credentials and their \defined{validation}, the S2B has to send to the provided address an email with an activation link}
@@ -270,8 +269,7 @@ We chose to omit the Sequence Diagram considering that the Activity diagram in t
 		\item[] \myref{D-everyone-email}
 	\end{itemize}
 
-	\bigskip
-	\noindent\myref{G-log-in}
+	\goal{G-log-in}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-remember-pairs}{for each User, the S2B must remember the pair email-password inserted during the registration process}
 		\item \mylabel{R-grant-access}{the S2B must grant access to the User if and only if the User inserts an existing email and the associated password}
@@ -280,36 +278,31 @@ We chose to omit the Sequence Diagram considering that the Activity diagram in t
 		\item[] \myref{D-user-remember}
 	\end{itemize}
 
-	\bigskip
-	\noindent\myref{G-use-credit-card}
+	\goal{G-use-credit-card}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-accept-cc}{the S2B must accept credit card data from the User}
 		\item \mylabel{R-check-cc}{the S2B must forward the credit card data to a credit institution to validate them}
 		\item \mylabel{R-valid-cc}{the S2B must let the User use the credit card if and only if the inserted credit card data are valid}
 	\end{enumerate}
 
-	\bigskip
-	\noindent\myref{G-pers-preferences}
+	\goal{G-pers-preferences}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-store-preferences}{for each type of preference, the S2B must provide to the User the possibility to change and store the preference value(s)}
 	\end{enumerate}
 
-	\bigskip
-	\noindent\myref{G-new-appointment}
+	\goal{G-new-appointment}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-new-appointment}{the system must provide a way to start the creation of a new appointment}
 		\item \mylabel{R-appointment-details}{during the process the user shall insert the \defined{appointment details}}
 	\end{enumerate}
 
-	\bigskip
-	\noindent\myref{G-visualize-update}
+	\goal{G-visualize-update}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-visualize}{the system provides a way to visualize created appointments}
 		\item \mylabel{R-edit-details}{after visualizing an appointment, a user can choose to edit its details}
 	\end{enumerate}
 
-	\bigskip
-	\noindent\myref{G-choose-sug} \textbf{and} \myref{G-change-preferred-transp}
+	\goal{G-choose-sug}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-solutions}{when time and location of the current appointment are set, the S2B produces a list of travel solutions with associated suggestions}
 		\item \mylabel{R-choose-solution}{the S2B provide the user the possibility to choose one of the travel solutions or leave the travel plan unspecified}
@@ -317,8 +310,7 @@ We chose to omit the Sequence Diagram considering that the Activity diagram in t
 		\item \mylabel{R-recompute-solutions}{when a new preferred transportation mean is selected the S2B has to recompute the list of solutions according to the new preference}
 	\end{enumerate}
 	
-	\bigskip
-	\noindent\myref{G-invite}
+	\goal{G-invite}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-can-invite}{when time and location of the current appointment are set, the S2B offers the possibility to invite other users or persons, through their emails.}
 		\item \mylabel{R-invite-send-email}{when a User or a Person is invited, the S2B will inform him/her sending an email}
@@ -327,29 +319,25 @@ We chose to omit the Sequence Diagram considering that the Activity diagram in t
 		\item[] \myref{D-email-always-received}
 	\end{itemize}
 	
-	\bigskip
-	\noindent\myref{G-owns-ticket}
+	\goal{G-owns-ticket}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-owns-ticket}{when the user selects a travel solution for which a ticket is expected, the S2B asks the User specify if he/she owns a ticket (either ordinary or a pass, in which case the deadline has to be inserted)}
 		\item \mylabel{R-buy-ticket}{if the user has selected a travel solution for which a ticket is expected and the User said to not own a ticket, the S2B asks him/her to buy a ticket (options available only for transportation means of \defined{affiliated companies})}
 	\end{enumerate}
 	
-	\bigskip
-	\noindent\myref{G-visualize-schedule}
+	\goal{G-visualize-schedule}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-schedule-view}{existing appointments can be viewed together as a schedule view}
 		\item \mylabel{R-daily-weekly}{the schedule can be daily or weekly}
 	\end{enumerate}
 	
-	\bigskip
-	\noindent\myref{G-delete}
+	\goal{G-delete}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-can-select}{in the schedule view the User can select one or more appointments}
 		\item \mylabel{R-delete-selected}{in the schedule view, selected appointments can be deleted}
 	\end{enumerate}
 	
-	\bigskip
-	\noindent\myref{G-locate}
+	\goal{G-locate}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-provide-loc-service}{when an user visualize an incoming appointment for which a vehicle sharing system has to be used, the S2B provides a localization service}
 	\end{enumerate}
@@ -358,15 +346,13 @@ We chose to omit the Sequence Diagram considering that the Activity diagram in t
 		\item[] \myref{D-provide-loc-API}
 	\end{itemize}
 	
-	\bigskip
-	\noindent\myref{G-redirection}
+	\goal{G-redirection}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-rent-vehicle}{the S2B offers the possibility to rent a vehicle}
 		\item \mylabel{R-redirects}{when the user selects a vehicle to rent, the app redirects him/her to the right company's app or site}
 	\end{enumerate}
 	
-	\bigskip
-	\noindent\myref{G-show-suggestions}
+	\goal{G-show-suggestions}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-bad-weather}{if weather forecast are bad: foot, bicycle motorbike are discouraged}
 		\item \mylabel{R-strikes}{if strikes have been announced, public transport is discouraged}
@@ -376,10 +362,8 @@ We chose to omit the Sequence Diagram considering that the Activity diagram in t
 	\begin{itemize}
 		\item[] \myref{D-traffic}
 	\end{itemize}
-	
-	
-	\bigskip
-	\noindent\myref{G-notify}
+
+	\goal{G-notify}
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-incoming-notified}{when an appointment becomes incoming, a notification is sent to the user}
 		\item \mylabel{R-notChoosen-suggests}{if a travel plan has not already been choosen, the notification suggests one}
