update use case diagram, remove licence and update RAS

--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -54,16 +54,16 @@ The system should:
 	\subsubsection{Definitions}
 		\begin{description}
 			% TODO Sort alphabetically
-			\item[- \textit{welcome page}:] after completing the sign up process,when the user logs in for the first time, he is redirected to this page where sequentially the app asks him to insert credit-card data, driving licence data and set his preferences the user can skip any of this phases and complete them in a second time. After this process, the initial settings configuration is completed
+			\item[- \textit{welcome page}:] the page where the user is redirected after completing the sign up process and logging in for the first time. In this page the app sequentially  asks to the user to insert credit-card data and set his preferences. The user can skip any of this phases and complete them in a second time. After this process, the initial settings configuration is completed.
 			\item[- \textit{personal preferences}:] with this term we mean that here the user can:\newline
 			- specify break time windows; \newline
 			- specify the interest or not for eco-friendly solutions;\newline
 			- specify constraints, such as avoiding  bike, on the travel means solutions).
-			\item[- \textit{supported languages}:]
-			\item[- \textit{valid credentials}:]
+			\item[- \textit{supported languages}:] the set of languages that the S2B will be able to use to comunicate with the user. English and Italian are included.
+			\item[- \textit{valid credentials}: Name, surname and personal email address]
 			\item[- \textit{appointment details}:]
 			\item[- \textit{incoming appointment}:]
-			\item[- \textit{affiliated company}:]
+			\item[- \textit{affiliated company}:] a company (transoprt company or vehicle sharing company) that has deals with the S2B to allow the user to start the process of buying a ticket or renting a shared vehicle in the app and terminate it after being redirected to the affiliated company's system.
 		\end{description}
 	\subsubsection{Acronyms}
 		\begin{description}
