--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -35,7 +35,7 @@ Here we provide several scenarios to better delineate the purposes for which the
 		On Monday morning, as usual, Travlndar+ shows to John his daily program reminding him about his children and showing the previous  travel mean planned.\newline
 		John, still intentioned to pick the children up with the car, does not modify the plan, closes the app and goes to work in the other side of Milan.\newline
 		At 12.00 Travlendar+, according to the GPS position of the man, suggests him to leave in 15 minutes.
-		Travel+ also suggests to avoid to go through  Viale Gioia because of the traffic and take the SS1.\newline
+		Travlendae+ also suggests to avoid to go through  Viale Gioia because of the traffic and take the SS1.\newline
 		Thanks to Travlendar+ John manages to be on time, collect the children and make his wife proud of him. 
 \subsection{User characteristics}
 	\subsubsection{Actors}
@@ -45,7 +45,6 @@ Here we provide several scenarios to better delineate the purposes for which the
 			able to use all the TravLendar+ services. He/she can login to the system and, after that, use all
 			the platform's functionalities.
 			\item Credit Institution: the institution that checks the credit-card validity and reports it to the S2B;
-			\item Licence Istitution:the institution that checks the drive license validity and reports it to the S2B;
 			\item Google: the system with whom the S2B retrieves the maps and related information about routes, real-time traffic situations, estimated travel time and weather conditions;
 			\item Transport Company System: the system of the affiliated companies with whom the S2B interacts to allow the user to buy the tickets for the associated travel mean;
 			\item Shared vehicle Company System: the system with whom the S2B interacts to allow the user to visualize the map of the available vehicles to rent and locate the nearest one. Vehicle Company System provides the GPS locations of the vehicles. To proceed with the renting the user is redirected to the vehicle Company System/App. The latter, to autenticate the user, uses the same credentials provided to the S2B.
