--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -29,6 +29,10 @@
 	\subsubsection{Use Case diagram}
 		\smallskip
 		\begin{figure}[H]	
+			\centerline{\includegraphics[scale= 0.7]{Images/UseCaseDiagram0}}
+			\caption{Person Use Case}
+		\end{figure}
+		\begin{figure}[H]	
 			\centerline{\includegraphics[width=\paperwidth-1]{Images/UseCaseDiagram1}}
 			\caption{User Use Case diagram}
 		\end{figure}
@@ -129,7 +133,6 @@
 				\hline\textbf{Flow of events:} & User insert sequentially the following  information:
 				\begin{itemize}
 				\item 	Credit card;
-				\item 	Driving licence;
 				\item 	Break time windows;
 				\item	Interest for Eco-friendly solutions on the travel means.
 				\item	Constraints on travel means.
@@ -142,7 +145,7 @@
 				The app notifies the user about the missing information and redirects anyway the user to the main page.
 				
 				\\
-				\hline\textbf{Exceptions:} & user inserts inconsistent information (incorrect credid-card/licence information, break time shorter than 30 minutes);\newline
+				\hline\textbf{Exceptions:} & user inserts inconsistent information (incorrect credid-card information, break time shorter than 30 minutes);\newline
 				The app allerts the user and asks him to insert again the info.
 				\\
 				\hline\textbf{Post conditions:} & the set configurations are successfully saved and the user is redirected to the main page.
